@@ -1,4 +1,4 @@
-/* $Cambridge: exim/exim-src/OS/os.h-OSF1,v 1.1 2004/10/06 15:07:39 ph10 Exp $ */
+/* $Cambridge: exim/exim-src/OS/os.h-OSF1,v 1.2 2005/03/15 14:09:12 ph10 Exp $ */
 
 /* Exim: OS-specific C header file for OSF1 */
 
@@ -8,6 +8,6 @@
 typedef struct flock flock_t;
 #define F_FREESP     O_TRUNC
 
-#define SOCKLEN_T    size_t
+#define EXIM_SOCKLEN_T    size_t
 
 /* End */
