@@ -1,4 +1,4 @@
-/* $Cambridge: exim/exim-src/OS/os.h-SCO,v 1.1 2004/10/06 15:07:39 ph10 Exp $ */
+/* $Cambridge: exim/exim-src/OS/os.h-SCO,v 1.2 2005/03/15 14:09:12 ph10 Exp $ */
 
 /* Exim: OS-specific C header file for SCO */
 
@@ -10,7 +10,7 @@
 #define LOAD_AVG_SYMBOL "avenrun"
 #define KERNEL_PATH     "/unix"
 #define FSCALE          256
-#define SOCKLEN_T       int
+#define EXIM_SOCKLEN_T  int
 
 #define HAVE_SYS_STATVFS_H
 #define F_FAVAIL        f_favail
