@@ -1,4 +1,4 @@
-/* $Cambridge: exim/exim-src/OS/os.h-SunOS5,v 1.1 2004/10/06 15:07:39 ph10 Exp $ */
+/* $Cambridge: exim/exim-src/OS/os.h-SunOS5,v 1.2 2005/03/15 14:09:12 ph10 Exp $ */
 
 /* Exim: OS-specific C header file for SunOS5 aka Solaris */
 
@@ -23,7 +23,7 @@
 /* This is needed for some early Solaris releases, but causes trouble
 in the current ones, so it is out by default. */
 
-/* #define SOCKLEN_T               size_t */
+/* #define EXIM_SOCKLEN_T       size_t */
 
 /* This is different from Linux and all other PAM implementations,
 it seems. */
