@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.90 2005/03/15 12:27:54 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.91 2005/03/15 14:09:12 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -39,6 +39,9 @@ PH/04. Change 4.11/85 fixed an obscure bug concerned with addresses that are
        address could be batched with a previous (undelivered) one; under
        certain circumstances this could lead to multiple deliveries to the same
        address. A one-line patch to add the appropriate test fixes the bug.
+
+PH/05. Renamed the macro SOCKLEN_T as EXIM_SOCKLEN_T because AIX uses SOCKLEN_T
+       in its include files, and this causes problems building Exim.
 
 
 A note about Exim versions 4.44 and 4.50
